--- a/cwh/style.css
+++ b/cwh/style.css
@@ -1,3 +1,10 @@
-body{
-    background-color: aliceblue;
+.box{
+   
+    background-color: red;
+    color: azure;
+    margin: 10px;
+    padding: 20px;
+    border: 2px solid black;
+    height: 100px;
+    box-sizing: border-box;
 }
