--- a/css_start/style.css
+++ b/css_start/style.css
@@ -1,7 +1,30 @@
-.box{
-    width: 100px;
-    height: 100px;
-    background-color: red;
-    color: azure;
-    
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+.container{
+    border: 5px solid blue;
+    display: flex;
+    flex-wrap: wrap;
+
+}
+.container > div{
+    border: 1px solid red;
+    padding: 10px;
+    margin: 10px;
+}
+p{
+    font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 10px;
+  text-transform: capitalize;
+}
+h1{
+    font-family: 'Arial', sans-serif;
+    font-weight: 500;
+    font-style: italic;
+    text-decoration:overline;
+    text-align: center;
+    text-shadow: 10px 10px 10px #FF0000;
+   
 }
