--- a/cwh/style.css
+++ b/cwh/style.css
@@ -1,21 +1,13 @@
-.box{
-    height: 32px;
-    width: 32px;
-    border: 2px solid black;
-    background-color: red;
-    
-    flex-grow: 6;
-}
+
 
 .container{
     border: 2px solid blue;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    flex-wrap: wrap;
-    flex-flow: row wrap;
-    gap: 10px;
-    /* flex-direction:rows; */
-    height: 80vh;
+    display: grid;
+    grid-template-columns: 120px 100px;
+}
+.box{
+    
+    border: 2px solid black;
+    height: 55px;
+    width: 55px;
 }
